# IMS-CAS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: CMakeLists.txt  Makefile  bmp.hh  cell.hh  cellular_automata.hh  main.cpp  plot.hh  state.hh
tests/: CMakeLists.txt  Makefile  check_bmp.sh  main.cpp  plot.cpp  support.hh  test_automata.cpp  test_bmp.cpp  test_cell.cpp  test_state.cpp
